# ilinfo

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
ilinfo/: __init__.py  analyzers.py  cli.py  mixins.py  objects.py  output_processors.py  utils.py
tests/: __init__.py  conftest.py  fixtures.py  test_analyzers.py  test_objects.py  test_output_processors.py  test_utils.py
tests/fixture-files/: .gitmodules  client.ini.php
tests/fixtures/: .gitmodules  ilias.ini.php  plugin.php
