[metadata]
name = ilinfo-ajbmachon
version = 0.1.0
url = # TODO fill in once versioned
author = Andre Machon
author_email = ajbmachon2@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    pytest
